Fixed "Frame not included" text being covered in mobile

--- a/index_files/life-of-pi-poster.css
+++ b/index_files/life-of-pi-poster.css
@@ -880,7 +880,7 @@ html.w-mod-js *[data-ix="0-opacity-on-load"] {
     line-height: 18px;
   }
   .frame-not-included-wrapper {
-    right: -15px;
+    right: 220px;
     bottom: 615px;
   }
   .testimonials-header {
